Preview: Finally fixed bug with short names on narrow devices
Previously, a dumb CSS replacement was done to number the stations. Now
a short name is passed based on station ID which should be a lot more
understandable.

--- a/css/main.css
+++ b/css/main.css
@@ -195,13 +195,8 @@ a {
         overflow: hidden;
         text-overflow: clip;
     }
-    div.timeline-groups-text:not(.skip-numbering):before {
-        content: "S" counter(station) "     ";
-        white-space:pre;
-        counter-increment: station;
-    }
-    div.skip-numbering:before {
-        content: "M       ";
+    div.timeline-groups-text:before {
+        content: attr(data-shortname) "     ";
         white-space:pre;
     }
     .ui-mini {
